--- a/todo/client-vno/public/index.html
+++ b/todo/client-vno/public/index.html
@@ -14,6 +14,7 @@
     <div id="app">
       <!-- built files will be auto injected -->
     </div>
+    <script type="module" src="https://unpkg.com/ky@0.27.0/index.js"></script>
     <script type="module" src="./build.js"></script>
   </body>
 </html>
